# c_playground

./: .gitattributes  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/: book.c  book.h  list.c  list.h  main.c  mem.c  mem.h  string.c  string.h  string2.h
